# FIAP_Data_Engineering_Programming

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  requirements.txt
config/: settings.yaml
scripts/: salestrust_pipeline_setup.sh  setup.sh
src/: main.py
src/configs/: settings.py
src/io_utils/: data_handler.py
src/pipeline/: pipeline.py
src/processing/: transformations.py
src/session/: spark_session.py
tests/: test_transformations.py
